@@ -80,6 +80,9 @@ RELEASE 0.14 - XXX
   - Interpolate the null string if an out-of-range subscript is used
     for a construction variable.
 
+  - Fix the internal Link function so that it creates properly links or
+    copies of files in subsidiary BuildDir directories.
+
   From Damyan Pepper:
 
   - Quote the "Entering directory" message like Make.
